--- a/_config.yml
+++ b/_config.yml
@@ -19,9 +19,9 @@ timezone: Asia/Tokyo
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: BLOG                          # the main title
+title: okmksato BLOG                          # the main title
 
-tagline: A text-focused Jekyll theme   # it will display as the sub-title
+tagline: # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
   A minimal, responsive, and powerful Jekyll theme for presenting professional writing.
@@ -39,7 +39,7 @@ social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
   name: okmksato
-  email: example@domain.com             # change to your email address
+#  email: example@domain.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
     - https://twitter.com/okmksato      # change to your twitter homepage
@@ -103,7 +103,7 @@ comments:
     category_id:
     mapping:           # optional, default to 'pathname'
     input_position:    # optional, default to 'bottom'
-    lang:              # optional, default to the value of `site.lang`
+    lang: ja             # optional, default to the value of `site.lang`
     reactions_enabled: # optional, default to the value of `1`
 
 # Self-hosted static assets, optional › https://github.com/cotes2020/chirpy-static-assets
