--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -5,13 +5,8 @@
 #   twitter: {twitter_of_author}
 #   url: {homepage_of_author}
 # -------------------------------------
+okmksato:
+  name: okmksato
+  twitter: okmksato
+  url: https://okmksato-blog.netlify.app/
 
-cotes:
-  name: Cotes Chung
-  twitter: cotes2020
-  url: https://github.com/cotes2020/
-
-sille_bille:
-  name: Dinesh Prasanth Moluguwan Krishnamoorthy
-  twitter: dinesh_MKD
-  url: https://github.com/SilleBille/
