--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,8 @@ description: >-                        # used by seo meta and the atom feed
   A minimal, responsive, and powerful Jekyll theme for presenting professional writing.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: ''
+#url: ''
+url: "https://okmksato.netlify.app"
 
 github:
   username: okmksato             # change to your github username
@@ -78,10 +79,10 @@ theme_mode:   # [light|dark]
 # will be added to all image (site avatar & posts' images) paths starting with '/'
 #
 # e.g. 'https://cdn.com'
-# img_cdn: 'https://chirpy-img.netlify.app'
+img_cdn: '/assets/'
 
 # the avatar on sidebar, support local or CORS resources
-avatar: '/assets/img/avatar.jpg'
+avatar: 'images/avatar.jpg'
 
 # boolean type, the global switch for ToC in posts.
 toc: true
