--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ description: >-                        # used by seo meta and the atom feed
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 #url: ''
-url: "https://okmksato.netlify.app"
+url: "https://okmksato-blog.netlify.app"
 
 github:
   username: okmksato             # change to your github username
